--- a/asat.html
+++ b/asat.html
@@ -29,74 +29,74 @@
 			<span style="coler:red">
 				Age:<br/>(0~120years)
 			</span>
-			<input id="man_age" type="number" name="man_age" placeholder="Age(0~120years)" min="0" max="120"/>
+			<input id="man_age" type="number" name="man_age" placeholder="Age(0~120years)" min="0" max="120" title="The age must be between 0 and 120"/>
 		</label>
 		<label>
 			<span>
 				Height:<br/>(50~250cm)
 			</span>
-			<input id="man_height" type="number" name="man_height" placeholder="Height(50~250cm)" min="50" max="250"
+			<input id="man_height" type="number" name="man_height" placeholder="Height(50~250cm)" min="50" max="250" title="The height must be between 50 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Weight:<br/>(20~250kg)
 			</span>
-			<input id="man_weight" type="number" name="man_weight" placeholder="Weight(20~250kg)" min="20" max="250" 
+			<input id="man_weight" type="number" name="man_weight" placeholder="Weight(20~250kg)" min="20" max="250" title="The weight must be between 20 and 250"
 			/>
 		</label>
 		<label>
 			<span>
-				Waist circumference:<br/>(15~250cm)
+				 Waist circumference:<br/>(15~250cm)
 			</span>
-			<input id="man_wc" type="number" name="man_wc" placeholder="Waist circumference(15~250cm)" min="15" max="250"
+			<input id="man_wc" type="number" name="man_wc" placeholder="Waist circumference(15~250cm)" min="15" max="250" title="The waist circumference must be between 15 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Hip circumference:<br/>(15~250cm)
 			</span>
-			<input id="man_hc" type="number" name="man_hc" placeholder="Hip circumference(15~250cm)" min="15" max="250"
+			<input id="man_hc" type="number" name="man_hc" placeholder="Hip circumference(15~250cm)" min="15" max="250" title="The hip circumference must be between 15 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Whole body fat mass * :<br/>(0~150kg)
 			</span>
-			<input id="man_Whole_body_fat_mass" type="number" name="man_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
-			/>
+			<input id="man_Whole_body_fat_mass" type="number" name="man_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150" title="The whole body fat mass must be between 0 and 150"
+			 />
 		</label>
 		<label>
 			<span>
 				Whole body fat free mass * :<br/>(0~150kg)
 			</span>
-			<input id="man_Whole_body_fat_free_mass" type="number" name="man_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150"/>
+			<input id="man_Whole_body_fat_free_mass" type="number" name="man_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" title="The whole body fat free mass must be between 0 and 150"/>
 		</label>
 		<label>
 			<span>
 				Trunk fat mass * :<br/>(0~80kg)
 			</span>
-			<input id="man_Trunk_fat_mass" type="number" name="man_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"/>
+			<input id="man_Trunk_fat_mass" type="number" name="man_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80" title="The trunk fat mass must be between 0 and 80"/>
 		</label>
 		
 		<label>
 			<span>
 				Trunk fat free mass * :<br/>(0~80kg)
 			</span>
-			<input id="man_Trunk_fat_free_mass" type="number" name="man_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"/>
+			<input id="man_Trunk_fat_free_mass" type="number" name="man_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40" title="The trunk fat free mass must be between 0 and 80"/>
 		</label>
 		<label>
 			<span>
 				Leg fatfree mass * :<br/>(0~40kg)
 			</span>
-			<input id="man_Leg_fatfree_mass" type="number" name="man_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"
+			<input id="man_Leg_fatfree_mass" type="number" name="man_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40" title="The leg fatfree mass must be between 0 and 40"
 			/>
 		</label>
 		<label>
 			<span>
 				Basal metabolic rate * :<br/>(500~30000kJ)
 			</span>
-			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"/>
+			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" title="The basal metabolic rate must be between 500 and 30000"/>
 		</label>
 		<label>
 			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
@@ -124,7 +124,7 @@
 	</form>
 
 
-	<form action="" id="man_form" name="man_form" method="post" class="basic-grey">
+	<form action="" id="woman_form" name="woman_form" method="post" class="basic-grey">
 		<h1>		
 			ASAT volume estimation for female
 			<span style="color:red">
@@ -135,76 +135,74 @@
 			<span style="coler:red">
 				Age:<br/>(0~120years)
 			</span>
-			<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120years)" min="0" max="120"/>
+			<input id="woman_age" type="number" name="woman_age" placeholder="Age(0~120years)" min="0" max="120" title="The age must be between 0 and 120"/>
 		</label>
 		<label>
 			<span>
 				Height:<br/>(50~250cm)
 			</span>
-			<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250"
+			<input id="woman_height" type="number" name="woman_height" placeholder="Height(50~250cm)" min="50" max="250" title="The height must be between 50 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Weight:<br/>(20~250kg)
 			</span>
-			<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250"
+			<input id="woman_weight" type="number" name="woman_weight" placeholder="Weight(20~250kg)" min="20" max="250" title="The weight must be between 20 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Waist circumference:<br/>(15~250cm)
 			</span>
-			<input id="woman_wc" type="number" name="woman_wc" placeholder="Waist circumference(15~250cm)" min="15" max="250"
+			<input id="woman_wc" type="number" name="woman_wc" placeholder="Waist circumference(15~250cm)" min="15" max="250" title="The waist circumference must be between 15 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Hip circumference:<br/>(15~250cm)
 			</span>
-			<input id="woman_hc" type="number" name="woman_hc" placeholder="Hip circumference(15~250cm)" min="15" max="250"
+			<input id="woman_hc" type="number" name="woman_hc" placeholder="Hip circumference(15~250cm)" min="15" max="250" title="The hip circumference must be between 15 and 250"
 			/>
 		</label>
 		<label>
 			<span>
 				Whole body fat mass * :<br/>(0~150kg)
 			</span>
-			<input id="woman_Whole_body_fat_mass" type="number" name="woman_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"
+			<input id="woman_Whole_body_fat_mass" type="number" name="woman_Whole_body_fat_mass" placeholder="Whole body fat mass(0~150kg)" min="0" max="150"title="The whole body fat mass must be between 0 and 150"
 			 />
 		</label>
 		<label>
 			<span>
 				Whole body fat free mass * :<br/>(0~150kg)
 			</span>
-			<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" />
+			<input id="woman_Whole_body_fat_free_mass" type="number" name="woman_Whole_body_fat_free_mass" placeholder="Whole body fat free mass(0~150kg)" min="0" max="150" title="The whole body fat free mass must be between 0 and 150"
+			/>
 		</label>
 		<label>
 			<span>
 				Trunk fat mass * :<br/>(0~80kg)
 			</span>
-			<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80"
-			/>
+			<input id="woman_Trunk_fat_mass" type="number" name="woman_Trunk_fat_mass" placeholder="Trunk fat mass(0~80kg)" min="0" max="80" title="The trunk fat mass must be between 0 and 80"/>
 		</label>
 		
 		<label>
 			<span>
 				Trunk fat free mass * :<br/>(0~80kg)
 			</span>
-			<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40"
-			/>
+			<input id="woman_Trunk_fat_free_mass" type="number" name="woman_Trunk_fat_free_mass" placeholder="Trunk fat free mass(0~80kg)" min="0" max="40" title="The trunk fat free mass must be between 0 and 80"/>
 		</label>
 		<label>
 			<span>
 				Leg fatfree mass * :<br/>(0~40kg)
 			</span>
-			<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40"
-			/>
+			<input id="woman_Leg_fatfree_mass" type="number" name="woman_Leg_fatfree_mass" placeholder="Leg fatfree mass(0~40kg)" min="0" max="40" title="The leg fatfree mass must be between 0 and 40"/>
 		</label>
 		<label>
 			<span>
 				Basal metabolic rate * :<br/>(500~30000kJ)
 			</span>
-			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000"/>
+			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" title="The basal metabolic rate must be between 500 and 30000"/>
 		</label>
 		<label>
 			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
