--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			width:100%
 		}
 		.basic-grey {
-			margin-top:7%;
+			margin-top:3%;
 			width:1300px
 		}
 		.basic-grey div{
 			text-align:left;
 			margin-left:200px;
-			margin-bottom: 25px;
+			margin-bottom: 11px;
 		}
 		.index-input{
 			margin-top:20px;
@@ -36,7 +36,11 @@
 	<h1>
 		Development and external validation of MRI measured fat and muscle volume prediction models in UK Biobank
 		<span>
-			论文作者论文作者论文作者论文作者论文作者..
+			Yueqi Lu<sup>1</sup>*, Ying Shan<sup>2</sup>*, Liang Dai<sup>2</sup>, Xiaosen Jiang<sup>1</sup>, Congying Song<sup>2</sup>, Bangwei Chen<sup>1</sup>, Jingwen Zhang<sup>3</sup>, Liuqiao Yang<sup>1</sup>, Jing Li<sup>3</sup>, Yue Zhang<sup>2</sup>, Junjie Xu<sup>2</sup>, Tao Li<sup>1</sup>, Zuying Xiong<sup>3</sup>, Yong Bai<sup>1#</sup>, Xiaoyan Huang<sup>3#</sup><br/><br/>
+<sup>1</sup>BGI-Shenzhen, Shenzhen, China<br/>
+<sup>2</sup>Clinical Research Academy, Peking University Shenzhen Hospital, Peking University, Shenzhen, China<br/>
+<sup>3</sup>Renal Division, Peking University Shenzhen Hospital, Peking University, Shenzhen, China<br/>
+<font style="line-height:30px">*Yueqi Lu and Ying Shan contributed equally to this work.<font><br/>
 		</span>
 	</h1>
 	<div>
