--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<h1>
 		Development and external validation of MRI measured fat and muscle volume prediction models in UK Biobank
 		<span>
-			Yueqi Lu<sup>1</sup>*, Ying Shan<sup>2</sup>*, Liang Dai<sup>2</sup>, Xiaosen Jiang<sup>1</sup>, Congying Song<sup>2</sup>, Bangwei Chen<sup>1</sup>, Jingwen Zhang<sup>3</sup>, Liuqiao Yang<sup>1</sup>, Jing Li<sup>3</sup>, Yue Zhang<sup>2</sup>, Junjie Xu<sup>2</sup>, Tao Li<sup>1</sup>, Zuying Xiong<sup>3</sup>, Yong Bai<sup>1#</sup>, Xiaoyan Huang<sup>3#</sup><br/><br/>
+			Yueqi Lu<sup>1</sup><font style="position:relative;top:-2px;">*</font>, Ying Shan<sup>2</sup><font style="position:relative;top:-2px;">*</font>, Liang Dai<sup>2</sup>, Xiaosen Jiang<sup>1</sup>, Congying Song<sup>2</sup>, Bangwei Chen<sup>1</sup>, Jingwen Zhang<sup>3</sup>, Liuqiao Yang<sup>1</sup>, Jing Li<sup>3</sup>, Yue Zhang<sup>2</sup>, Junjie Xu<sup>2</sup>, Tao Li<sup>1</sup>, Zuying Xiong<sup>3</sup>, Yong Bai<sup>1#</sup>, Xiaoyan Huang<sup>3#</sup>.<br/><br/>
 <sup>1</sup>BGI-Shenzhen, Shenzhen, China<br/>
 <sup>2</sup>Clinical Research Academy, Peking University Shenzhen Hospital, Peking University, Shenzhen, China<br/>
 <sup>3</sup>Renal Division, Peking University Shenzhen Hospital, Peking University, Shenzhen, China<br/>
