--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 			width:100%
 		}
 		.basic-grey {
-			margin-top:3%;
-			width:1300px
+			margin-top:2%;
+			width:1132px;
+			max-width: 1200px;
 		}
 		.basic-grey div{
 			text-align:left;
-			margin-left:200px;
+			margin-left:260px;
 			margin-bottom: 11px;
 		}
 		.index-input{
