--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 			max-width: 1200px;
 		}
 		.basic-grey div{
-			text-align:left;
-			margin-left:260px;
+			text-align:center;
 			margin-bottom: 50px;
 		}
 		.index-input{
@@ -45,11 +44,11 @@
 		</span>
 	</h1>
 	<div>
-		<a href="vat.html"><input type="button" class="button index-input" value="Visceral adipose tissue (VAT) volume estimation" /></a>
+		<a href="vat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Visceral adipose tissue (VAT) volume estimation" /></a>
 		<br/>
-		<a href="asat.html"><input type="button" class="button index-input" value="Abdominal subcutaneous adipose tissue (ASAT) volume estimation" /></a>
+		<a href="asat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Abdominal subcutaneous adipose tissue (ASAT) volume estimation" /></a>
 		<br/>
-		<a href="ffmv.html"><input type="button" class="button index-input" value="Thigh fat-free muscle volume (FFMV) volume estimation" /></a>
+		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Thigh fat-free muscle volume (FFMV) volume estimation" /></a>
 	</div>
 </form>
 </div>
