--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<br/>
 		<a href="asat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Abdominal subcutaneous adipose tissue (ASAT) volume estimation" /></a>
 		<br/>
-		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Thigh fat-free muscle volume (FFMV) volume estimation" /></a>
+		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Thigh fat-free muscle (FFMV) volume estimation" /></a>
 	</div>
 </form>
 </div>
